--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -2160,6 +2160,7 @@ CONFIG_MSM_CAMERA_FLASH=y
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
+# CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_I2C_SI4713 is not set
@@ -2283,6 +2284,7 @@ CONFIG_FB_MSM_LCDC_S7Pro_WXGA=y
 # CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
+# FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
@@ -2338,6 +2340,8 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 # CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565 is not set
 # CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888 is not set
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
+# CONFIG_FB_MSM_EBI2_EPSON_S1D_QVGA_PANEL is not set
+# CONFIG_FB_MSM_EBI2_PANEL_DETECT is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
 # CONFIG_LCD_L4F00242T03 is not set
