--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -2262,6 +2262,7 @@ CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
+# CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 CONFIG_FB_MSM_LCDC_S7Pro_WXGA=y
@@ -2286,6 +2287,7 @@ CONFIG_FB_MSM_LCDC_S7Pro_WXGA=y
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
+CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
