--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,17 @@
 # subdirectories here. Add them in the ".gitignore" file
 # in that subdirectory instead.
 #
-# NOTE! Please use 'git ls-files -i --exclude-standard'
+# NOTE! Please use 'git-ls-files -i --exclude-standard'
 # command after changing this file, to see if there are
 # any tracked files which get ignored after the change.
 #
 # Normal rules
 #
-.*
+.config
+.config.old
+.version
+.tmp*
+.*.cmd
 *.o
 *.o.*
 *.a
@@ -22,42 +26,37 @@
 *.lst
 *.symtypes
 *.order
-modules.builtin
 *.elf
 *.bin
 *.gz
-*.bz2
-*.lzma
-*.xz
-*.lzo
 *.patch
-*.gcno
+*.rej
+*.diff
 
 #
 # Top-level generic files
 #
-/tags
-/TAGS
-/linux
-/vmlinux
-/vmlinuz
-/System.map
-/Module.markers
-/Module.symvers
-
-#
-# git files that we don't want to ignore even it they are dot-files
-#
+tags
+TAGS
+vmlinux
+System.map
+Module.markers
+Module.symvers
 !.gitignore
 !.mailmap
 
 #
 # Generated include files
 #
+include/asm
+include/asm-*/asm-offsets.h
 include/config
+include/linux/autoconf.h
+include/linux/compile.h
 include/linux/version.h
+include/linux/utsrelease.h
+include/linux/bounds.h
 include/generated
-arch/*/include/generated
 
 # stgit generated dirs
 patches-*
@@ -69,12 +68,6 @@ series
 # cscope files
 cscope.*
 ncscope.*
-
-# gnu global files
-GPATH
-GRTAGS
-GSYMS
-GTAGS
 
 *.orig
 *~
