Add ROW I/O Scheduler by Qualcomm.
Conflicts:
	arch/arm/configs/mediapad_defconfig

--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -1,7 +1,6 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 3.0.75 Kernel Configuration
-
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -184,9 +183,11 @@ CONFIG_BLK_DEV_BSG=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_NOOP is not set
@@ -466,6 +467,7 @@ CONFIG_MSM_V2_TLMM=y
 CONFIG_MSM_SECURE_IO=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM8X60=y
+CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG=y
