--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -422,7 +422,9 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 CONFIG_CPU_VOLTAGE_TABLE=y
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1188000
+CONFIG_MSM_CPU_FREQ_MIN=192000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -3365,4 +3367,3 @@ CONFIG_HAS_DMA=y
 CONFIG_CPU_RMAP=y
 CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
-
