--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -456,7 +456,7 @@ CONFIG_MSM_PIL_TZAPPS=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
-CONFIG_MSM_BUSPM_DEV=m
+CONFIG_MSM_BUSPM_DEV=y
 # CONFIG_MSM_TZ_LOG is not set
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
