Implement kernel based mpdecision from showp1984

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1404,6 +1404,14 @@ config MSM_DALRPC_TEST
 	help
 	  Exercises DAL RPC calls to QDSP6.
 
+config MSM_MPDEC
+    bool "Enable kernel based mpdecision"
+    depends on MSM_SMP
+    default n
+    help
+      This enables kernel based multi core control.
+      (up/down hotplug based on load)
+
 config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"
 	default y
