--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -1314,7 +1314,7 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 CONFIG_LIBRA_SDIOIF=m
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCM4329 is not set
+CONFIG_BCM4329=m
 # CONFIG_BCMDHD is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
