mediapad_config: disable modules

--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -1321,7 +1321,7 @@ CONFIG_SMSC911X=y
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
-CONFIG_LIBRA_SDIOIF=m
+# CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH_COMMON is not set
 CONFIG_BCM4329=m
 # CONFIG_BCMDHD is not set
@@ -2188,7 +2188,7 @@ CONFIG_MT9P111_LITEON_OTP_LSC=y
 # CONFIG_WEBCAM_OV7692 is not set
 # CONFIG_WEBCAM_OV9726 is not set
 CONFIG_MT9P111=y
-CONFIG_WEBCAM_MT9M114=m
+CONFIG_WEBCAM_MT9M114=y
 CONFIG_MT9P111_LITEON=y
 # CONFIG_VX6953 is not set
 # CONFIG_MT9E013 is not set
@@ -2938,12 +2938,10 @@ CONFIG_CLKDEV_LOOKUP=y
 #
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
-CONFIG_EXT2_FS_SECURITY=y
 # CONFIG_EXT2_FS_POSIX_ACL is not set
 # CONFIG_EXT2_FS_SECURITY is not set
 # CONFIG_EXT2_FS_XIP is not set
 CONFIG_EXT3_FS=y
-CONFIG_EXT3_FS_SECURITY=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT3_FS_XATTR=y
 # CONFIG_EXT3_FS_POSIX_ACL is not set
