implement touchwake for t1320 touchscreen nstools to enable it https://github.com/arifhn/nstools

--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -1525,6 +1525,7 @@ CONFIG_DEBUG_MXT224_FIRMWARE=y
 # CONFIG_TOUCHSCREEN_CY8C_TS is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_I2C is not set
 CONFIG_INPUT_MISC=y
+CONFIG_TOUCH_WAKE=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
