--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -1167,7 +1167,7 @@ CONFIG_UID_STAT=y
 # CONFIG_TSIF is not set
 # CONFIG_TSIF_DEBUG is not set
 # CONFIG_TSPP is not set
-CONFIG_HAPTIC_ISA1200=y
+# CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_PMIC8058_PWM=y
 CONFIG_PMIC8XXX_VIBRATOR=y
 # CONFIG_PMIC8XXX_NFC is not set
