board_s7pro: we don't have fm radio

--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -1906,9 +1906,9 @@ CONFIG_PMIC8058=y
 CONFIG_PMIC8901=y
 # CONFIG_TPS6507X is not set
 # CONFIG_MFD_TPS6586X is not set
-CONFIG_MARIMBA_CORE=y
+# CONFIG_MARIMBA_CORE is not set
 # CONFIG_MARIMBA_CODEC is not set
-CONFIG_TIMPANI_CODEC=y
+# CONFIG_TIMPANI_CODEC is not set
 # CONFIG_TWL4030_CORE is not set
 # CONFIG_MFD_STMPE is not set
 # CONFIG_MFD_TC3589X is not set
