Revert "wifi: enable bcmdhd"
This reverts commit 84e7e5a0b9c87770c709d83ad94bfd8a5f556695.

--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -431,7 +431,7 @@ CONFIG_MSM8X60_AUDIO=y
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 # CONFIG_MSM_DMA_TEST is not set
-# CONFIG_WIFI_CONTROL_FUNC is not set
+CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
@@ -1072,11 +1072,11 @@ CONFIG_MSM_BT_POWER=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
-# CONFIG_WIRELESS_EXT is not set
-# CONFIG_WEXT_CORE is not set
-# CONFIG_WEXT_PROC is not set
-# CONFIG_WEXT_SPY is not set
-# CONFIG_WEXT_PRIV is not set
+CONFIG_WIRELESS_EXT=y
+CONFIG_WEXT_CORE=y
+CONFIG_WEXT_PROC=y
+CONFIG_WEXT_SPY=y
+CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
@@ -1084,10 +1084,10 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
-# CONFIG_CFG80211_WEXT is not set
-# CONFIG_WIRELESS_EXT_SYSFS is not set
+CONFIG_CFG80211_WEXT=y
+CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
-CONFIG_CFG80211_ALLOW_RECONNECT=y
+# CONFIG_CFG80211_ALLOW_RECONNECT is not set
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
@@ -1314,8 +1314,8 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCM4329 is not set
-CONFIG_BCMDHD=m
+CONFIG_BCM4329=m
+# CONFIG_BCMDHD is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
