disable for now

--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -114,12 +114,12 @@ config FB_MSM_OVERLAY
 config FB_MSM_MDP41_BLT_MODE
         depends on FB_MSM_OVERLAY
         bool "MDP41 overlay force blt mode"
-        default y
+        default n
 
 config FB_MSM_MDP41_VIRTUAL_BF_PIPE
         depends on FB_MSM_OVERLAY
         bool "MDP41 overlay use virtual borderfill pipe"
-        default y
+        default n
 
 config FB_MSM_DTV
 	depends on FB_MSM_OVERLAY
