Update mediapad config

--- a/arch/arm/configs/mediapad_defconfig
+++ b/arch/arm/configs/mediapad_defconfig
@@ -2878,8 +2878,9 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_XVMALLOC=y
+# CONFIG_XVMALLOC is not set
 CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZCACHE=y
 # CONFIG_QCACHE is not set
